--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,12 @@
 	<scope>runtime</scope>
   </dependency>
 
+<!--  
+   <dependency>
+     <groupId>org.springframework</groupId>
+     <artifactId>spring-web</artifactId>
+     <version>5.1.9.RELEASE</version>
+   </dependency> -->
  </dependencies>
 
 	<build>
