--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -7,9 +7,9 @@ server:
 # MySQL datasource configuration
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/spring_boot_db
+    url: jdbc:mysql://localhost:3307/spring_boot_db
     username: root
-    password: 
+    password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 # Hibernate properties
